--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -25,6 +25,40 @@
    0. Normalize.css v2.1.3 | MIT License | git.io/normalize | (minified)
    ========================================================================== */
 
+@font-face {
+    font-family: 'TitleFont';
+    src: url('/assets/fonts/TitleFont.eot?') format('eot'), 
+         url('/assets/fonts/TitleFont.otf')  format('opentype'),
+         url('/assets/fonts/TitleFont.woff') format('woff'), 
+         url('/assets/fonts/TitleFont.ttf')  format('truetype'),
+         url('/assets/fonts/TitleFont.svg#TitleFont') format('svg');
+}
+
+
+
+@font-face {
+  font-family: 'Noto Serif';
+  src: url('/assets/fonts/NotoSerif.eot?#iefix') format('embedded-opentype'),  url('/assets/fonts/NotoSerif.woff') format('woff'), url('/assets/fonts/NotoSerif.ttf')  format('truetype'), url('/assets/fonts/NotoSerif.svg#NotoSerif') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('/assets/fonts/OpenSans.eot?#iefix') format('embedded-opentype'),  url('/assets/fonts/OpenSans.woff') format('woff'), url('/assets/fonts/OpenSans.ttf')  format('truetype'), url('/assets/fonts/OpenSans.svg#OpenSans') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Ubuntu Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Ubuntu Mono'), local('UbuntuMono-Regular'), url('/assets/fonts/Ubuntu-mono.woff') format('woff');
+}
+
+
 article, aside, details,
 figcaption, figure,
 footer, header, hgroup,
@@ -53,6 +87,9 @@ hr {
 }
 mark { background: #FF0; color: #000; }
 code, kbd, pre,
+pre code {
+    font-family: "Ubuntu Mono";
+}
 samp { font-family: monospace, serif; font-size: 1em; }
 pre { white-space: pre-wrap; }
 q { quotes: "\201C" "\201D" "\2018" "\2019"; }
@@ -658,7 +695,7 @@ margin on the iframe, cause it breaks stuff. */
     font-size: 5.6rem;
     letter-spacing: -1px;
     font-weight: 700;
-    font-family: "Open Sans", sans-serif;
+    font-family: "TitleFont", sans-serif;
     color: #fff;
 }
 
@@ -1802,3 +1839,107 @@ body:not(.post-template) .post-title {
    End of file. Animations should be the last thing here. Do not add stuff
    below this point, or it will probably fuck everything up.
    ========================================================================== */
+
+
+/*
+
+Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-license.org/
+
+*/
+
+pre code {
+  display: block;
+  padding: 0.5em;
+  background: #23241f;
+}
+pre .tag,
+pre code {
+  color: #f8f8f2;
+}
+pre .keyword,
+pre .function,
+pre .literal,
+pre .change,
+pre .winutils,
+pre .flow,
+pre .lisp .title,
+pre .clojure .built_in,
+pre .nginx .title,
+pre .tex .special {
+  color: #66d9ef;
+}
+pre .variable,
+pre .params {
+  color: #fd9720;
+}
+pre .constant {
+  color: #66d9ef;
+}
+pre .title,
+pre .class .title,
+pre .css .class {
+  color: #a6e22e;
+}
+pre .attribute,
+pre .symbol,
+pre .symbol .string,
+pre .tag .title,
+pre .value,
+pre .css .tag {
+  color: #f92672;
+}
+pre .number,
+pre .preprocessor,
+pre .pragma,
+pre .regexp {
+  color: #ae81ff;
+}
+pre .tag .value,
+pre .string,
+pre .css .id,
+pre .subst,
+pre .haskell .type,
+pre .ruby .class .parent,
+pre .built_in,
+pre .sql .aggregate,
+pre .django .template_tag,
+pre .django .variable,
+pre .smalltalk .class,
+pre .django .filter .argument,
+pre .smalltalk .localvars,
+pre .smalltalk .array,
+pre .attr_selector,
+pre .pseudo,
+pre .addition,
+pre .stream,
+pre .envvar,
+pre .apache .tag,
+pre .apache .cbracket,
+pre .tex .command,
+pre .prompt {
+  color: #e6db74;
+}
+pre .comment,
+pre .javadoc,
+pre .java .annotation,
+pre .python .decorator,
+pre .template_comment,
+pre .pi,
+pre .doctype,
+pre .deletion,
+pre .shebang,
+pre .apache .sqbracket,
+pre .tex .formula {
+  color: #75715e;
+}
+pre .coffeescript .javascript,
+pre .javascript .xml,
+pre .tex .formula {
+  opacity: 0.5;
+}
+pre .xml .javascript,
+pre .xml .vbscript,
+pre .xml .css,
+pre .xml .cdata {
+  opacity: 0.5;
+}
