--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -648,6 +648,11 @@ The first (most recent) post in the list is styled to be bigger than the others 
 }
 
 .kg-card-markdown {
+    color: #555;
+    font-family: 'source-han-sans-simplified-c', 'PingFang SC', 'Hiragino Sans GB', 'PingHei',
+        'Open Sans', sans-serif, Helvetica Neue, 'Work Sans', 'Microsoft YaHei',
+        SimSun;
+    font-size: 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1813,5 +1818,741 @@ Super neat trick courtesy of @JoelDrapper
     }
     .site-footer-nav a:first-child {
         margin-left: 0;
+    }
+}
+
+
+.plain_content .p_part {
+    margin: 1em 0 2.5em 0;
+}
+
+.kg-card-markdown {
+    line-height: 1.8em;
+    word-break: break-all;
+}
+
+.kg-card-markdown .md_line_dom_embed {
+    text-indent: 0 !important;
+}
+
+.kg-card-markdown .md_video, .kg-card-markdown .md_audio {
+    max-width: 100%;
+}
+
+.kg-card-markdown .md_line {
+    margin-top: 0;
+    margin-bottom: 0.85em;
+}
+
+.kg-card-markdown a {
+    color: #499eff;
+    text-decoration: none;
+}
+
+.kg-card-markdown a:hover {
+    text-decoration: underline;
+}
+
+.kg-card-markdown pre code {
+    border: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+}
+
+.kg-card-markdown .md_block {
+    margin-bottom: 2.2em;
+}
+
+.kg-card-markdown .md_video, .kg-card-markdown .md_audio {
+    max-width: 100%;
+}
+
+.kg-card-markdown .x2_image {
+    zoom: 50%; }
+
+.kg-card-markdown h1, .kg-card-markdown h2, .kg-card-markdown h3, .kg-card-markdown h4, .kg-card-markdown h5, .kg-card-markdown h6 {
+    text-rendering: optimizeLegibility;
+    line-height: 1;
+}
+
+.kg-card-markdown h1 {
+    font-size: 2em;
+    line-height: 1.2em;
+    margin: 1em 0;
+}
+
+.kg-card-markdown h2 {
+    font-size: 1.65em;
+    line-height: 1.2em;
+    margin: 1em 0 1em 0;
+}
+
+.kg-card-markdown h3 {
+    font-size: 1.35em;
+    margin: 1em 0 1em 0;
+}
+
+.kg-card-markdown h4 {
+    font-size: 1.2em;
+}
+
+.kg-card-markdown h5 {
+    font-size: 1.1em;
+    font-weight: bold;
+}
+
+.kg-card-markdown h6 {
+    font-size: 1em;
+    font-weight: bold;
+}
+
+.kg-card-markdown h4, .kg-card-markdown h5, .kg-card-markdown h6 {
+    margin: 0.8em 0 0.5em 0;
+}
+
+.kg-card-markdown img {
+    max-width: 100%;
+    height: auto;
+}
+
+.kg-card-markdown p, .kg-card-markdown ul, .kg-card-markdown ol, .kg-card-markdown dl {
+    margin: 0.8em 0;
+}
+
+.kg-card-markdown ol ol, .kg-card-markdown ul ul, .kg-card-markdown ul ol, .kg-card-markdown ol ul {
+    margin: 0.4em 0;
+}
+
+.kg-card-markdown ul p, .kg-card-markdown ol p, .kg-card-markdown li p {
+    margin: 0;
+    overflow: visible;
+}
+
+.kg-card-markdown a img {
+    border: none;
+}
+
+.kg-card-markdown dl dt {
+    float: left;
+    width: 180px;
+    overflow: hidden;
+    clear: left;
+    text-align: right;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-weight: bold;
+    margin-bottom: 1em;
+}
+
+.kg-card-markdown dl dd {
+    margin-left: 200px;
+    margin-bottom: 1em;
+}
+
+.kg-card-markdown hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #efefef;
+    margin: 3.2em 0;
+    padding: 0;
+}
+
+.kg-card-markdown blockquote {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 1em 0;
+    padding: 0 0 0 1.2em;
+    border-left: 0.2em solid #ddd;
+    color: #555;
+    min-height: 20px;
+}
+
+.kg-card-markdown blockquote p {
+    margin: 0.8em 0;
+    font-size: 18px;
+    line-height: 1.2;
+    text-align: left;
+}
+
+.kg-card-markdown blockquote span.md_line {
+    margin-bottom: 0.25em;
+    margin-top: 0.25em;
+}
+
+.kg-card-markdown blockquote ul {
+    padding: 0 15px;
+}
+
+.kg-card-markdown blockquote small {
+    display: inline-block;
+    margin: 0.8em 0 0.8em 1.5em;
+    font-size: 0.9em;
+    color: #ccc;
+}
+
+.kg-card-markdown .flow-graphic {
+    text-align: center;
+}
+
+.kg-card-markdown .footnotes .md_line {
+    display: inline !important;
+}
+
+.kg-card-markdown .img_rt_90 {
+    transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+}
+
+.kg-card-markdown .img_rt_180 {
+    transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+}
+
+.kg-card-markdown .img_rt_270 {
+    transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -webkit-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+}
+
+.kg-card-markdown .md_has_block_below {
+    margin-bottom: 0.2em;
+}
+
+.kg-card-markdown .md_has_block_below_img {
+    margin-bottom: 1.5em;
+}
+
+.kg-card-markdown mark {
+    background-color: #ffc336;
+}
+
+.kg-card-markdown code, .kg-card-markdown tt {
+    padding: 1px 3px;
+    font-family: Inconsolata, monospace, sans-serif;
+    white-space: pre-wrap;
+    border: 1px solid #E3EDF3;
+    background: #f7f7f9;
+    color: #222;
+    border-radius: 2px;
+}
+
+.kg-card-markdown code {
+    word-wrap: break-word;
+}
+
+.kg-card-markdown pre {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 1.6em 0;
+    border: 1px solid #E3EDF3;
+    width: 100%;
+    padding: 10px;
+    font-family: Inconsolata, monospace, sans-serif;
+    font-size: 0.9em;
+    white-space: pre;
+    overflow: auto;
+    background: #F7FAFB;
+    border-radius: 3px;
+}
+
+.kg-card-markdown pre::-webkit-scrollbar {
+    height: 10px;
+}
+
+.kg-card-markdown pre::-webkit-scrollbar-button {
+    display: none;
+}
+
+.kg-card-markdown pre::-webkit-scrollbar-track {
+    background: white;
+}
+
+.kg-card-markdown pre::-webkit-scrollbar-thumb {
+    min-height: 1rem;
+    background-color: #ccc;
+    background-clip: padding-box;
+    border: 3px solid #fdfdfd;
+    border-radius: 5px;
+}
+
+.kg-card-markdown pre::-webkit-scrollbar-thumb:active {
+    background-color: #999;
+    border-width: 2px;
+}
+
+.kg-card-markdown pre code, .kg-card-markdown tt {
+    font-size: inherit;
+    white-space: -moz-pre-wrap;
+    white-space: pre-wrap;
+    background: transparent;
+    border: none;
+    color: #333;
+    padding: 0;
+    margin: 0;
+}
+
+.kg-card-markdown kbd {
+    display: inline-block;
+    margin-bottom: 0.4em;
+    padding: 1px 8px;
+    border: #ccc 1px solid;
+    color: #666;
+    text-shadow: #fff 0 1px 0;
+    font-size: 0.9em;
+    font-weight: bold;
+    background: #f4f4f4;
+    border-radius: 4px;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 1px 0 0 white inset;
+}
+
+.kg-card-markdown table {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 1em 0;
+    max-width: 100%;
+    border-width: 1px;
+    border-style: solid;
+    background-color: transparent;
+}
+
+.kg-card-markdown table, .kg-card-markdown table tr, .kg-card-markdown table tr td, .kg-card-markdown table tr th {
+    border-color: #e5e5e5;
+}
+
+.kg-card-markdown table th {
+    color: #666666;
+    background-color: #fdfdfd;
+}
+
+.kg-card-markdown tr th {
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    text-align: left;
+}
+
+.kg-card-markdown tr th, .kg-card-markdown tr td {
+    padding: 5px 20px;
+    border-right: 1px solid;
+    font-size: 1em;
+}
+
+.kg-card-markdown tr th:last-child, .kg-card-markdown tr td:last-child {
+    border-right: 0px;
+}
+
+.kg-card-markdown table th {
+    font-weight: bold;
+}
+
+.kg-card-markdown table tbody > tr:nth-child(odd) > td, .kg-card-markdown table tbody > tr:nth-child(odd) > th {
+    background-color: #f9f9f9;
+}
+
+.kg-card-markdown .gist {
+    font-size: 12px;
+}
+
+.kg-card-markdown .gist table {
+    margin: 0;
+    width: auto;
+}
+
+.kg-card-markdown .gist table pre {
+    font-size: 12px;
+}
+
+.kg-card-markdown .gist table .line-numbers {
+    font-size: 12px;
+}
+
+.kg-card-markdown .toc {
+    background: #fdfdfd;
+    border-radius: 5px;
+    border: 1px solid #e6e6e6;
+    margin: 27px 0 47px 0;
+    padding: 0 15px;
+}
+
+.kg-card-markdown .toc ul {
+    padding: 5px 42px;
+}
+
+.kg-card-markdown .toc ul li {
+    padding: 0;
+    margin: 0;
+}
+
+.kg-card-markdown .toc ul li ul {
+    padding-top: 0;
+    margin-top: 0;
+}
+
+.kg-card-markdown .toc a {
+    text-decoration: none;
+    color: #3c3c3c;
+}
+
+.kg-card-markdown .with_lines pre {
+    border: none;
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+}
+
+.kg-card-markdown .todo_item {
+    list-style: none;
+    margin-left: -1.5em;
+}
+
+.kg-card-markdown .todo_item input {
+    margin-right: 0.5em;
+}
+
+.kg-card-markdown .todo_item .todo_item {
+    margin-left: auto;
+}
+
+.kg-card-markdown .todo_done_item {
+    color: #999999;
+}
+
+.kg-card-markdown .todo_undone_item {
+    color: #c85a57;
+}
+
+.kg-card-markdown .linenos {
+    padding: 0 0 0 10px;
+}
+
+.kg-card-markdown .linenos pre {
+    background: transparent;
+    border: none;
+    padding: 0;
+}
+
+.kg-card-markdown .codehilite {
+    background: transparent !important;
+}
+
+.kg-card-markdown table.codehilitetable {
+    border: none;
+}
+
+.kg-card-markdown .codehilitetable td {
+    border: none;
+    padding: 0;
+}
+
+.kg-card-markdown .flow-graphic {
+    text-align: center;
+}
+
+.kg-card-markdown span.md_line {
+    margin-bottom: 0.6em;
+    display: block;
+    line-height: 1.75;
+}
+
+.kg-card-markdown .md_line br {
+    display: none;
+}
+
+.kg-card-markdown .codehilite .hll {
+    background-color: #ffffcc;
+}
+
+.kg-card-markdown .codehilite {
+    background: #eeeedd;
+}
+
+.kg-card-markdown .codehilite .c {
+    color: #999999;
+}
+
+.kg-card-markdown .codehilite .err {
+    color: #a61717;
+    background-color: #e3d2d2;
+}
+
+.kg-card-markdown .codehilite .k {
+    color: #8B008B;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .n {
+    color: #555555;
+}
+
+.kg-card-markdown .codehilite .o {
+    color: #555555;
+}
+
+.kg-card-markdown .codehilite .p {
+    color: #555555;
+}
+
+.kg-card-markdown .codehilite .cm {
+    color: #999999;
+}
+
+.kg-card-markdown .codehilite .cp {
+    color: #1e889b;
+}
+
+.kg-card-markdown .codehilite .c1 {
+    color: #999999;
+}
+
+.kg-card-markdown .codehilite .cs {
+    color: #8B008B;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .gd {
+    color: #aa0000;
+}
+
+.kg-card-markdown .codehilite .ge {
+    font-style: italic;
+}
+
+.kg-card-markdown .codehilite .gr {
+    color: #aa0000;
+}
+
+.kg-card-markdown .codehilite .gh {
+    color: #000080;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .gi {
+    color: #00aa00;
+}
+
+.kg-card-markdown .codehilite .go {
+    color: #888888;
+}
+
+.kg-card-markdown .codehilite .gp {
+    color: #555555;
+}
+
+.kg-card-markdown .codehilite .gs {
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .gu {
+    color: #800080;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .gt {
+    color: #aa0000;
+}
+
+.kg-card-markdown .codehilite .kc {
+    color: #8B008B;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .kd {
+    color: #8B008B;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .kn {
+    color: #8B008B;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .kp {
+    color: #8B008B;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .kr {
+    color: #8B008B;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .kt {
+    color: #a7a7a7;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .m {
+    color: #B452CD;
+}
+
+.kg-card-markdown .codehilite .s {
+    color: #CD5555;
+}
+
+.kg-card-markdown .codehilite .na {
+    color: #658b00;
+}
+
+.kg-card-markdown .codehilite .nb {
+    color: #658b00;
+}
+
+.kg-card-markdown .codehilite .nc {
+    color: #008b45;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .no {
+    color: #00688B;
+}
+
+.kg-card-markdown .codehilite .nd {
+    color: #707a7c;
+}
+
+.kg-card-markdown .codehilite .ni {
+    color: #555555;
+}
+
+.kg-card-markdown .codehilite .ne {
+    color: #008b45;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .nf {
+    color: #008b45;
+}
+
+.kg-card-markdown .codehilite .nl {
+    color: #555555;
+}
+
+.kg-card-markdown .codehilite .nn {
+    color: #008b45;
+    text-decoration: underline;
+}
+
+.kg-card-markdown .codehilite .nx {
+    color: #555555;
+}
+
+.kg-card-markdown .codehilite .py {
+    color: #555555;
+}
+
+.kg-card-markdown .codehilite .nt {
+    color: #8B008B;
+    font-weight: bold;
+}
+
+.kg-card-markdown .codehilite .nv {
+    color: #00688B;
+}
+
+.kg-card-markdown .codehilite .ow {
+    color: #8B008B;
+}
+
+.kg-card-markdown .codehilite .w {
+    color: #bbbbbb;
+}
+
+.kg-card-markdown .codehilite .mb {
+    color: #B452CD;
+}
+
+.kg-card-markdown .codehilite .mf {
+    color: #B452CD;
+}
+
+.kg-card-markdown .codehilite .mh {
+    color: #B452CD;
+}
+
+.kg-card-markdown .codehilite .mi {
+    color: #B452CD;
+}
+
+.kg-card-markdown .codehilite .mo {
+    color: #B452CD;
+}
+
+.kg-card-markdown .codehilite .sb {
+    color: #CD5555;
+}
+
+.kg-card-markdown .codehilite .sc {
+    color: #CD5555;
+}
+
+.kg-card-markdown .codehilite .sd {
+    color: #CD5555;
+}
+
+.kg-card-markdown .codehilite .s2 {
+    color: #CD5555;
+}
+
+.kg-card-markdown .codehilite .se {
+    color: #CD5555;
+}
+
+.kg-card-markdown .codehilite .sh {
+    color: #1c7e71;
+    font-style: italic;
+}
+
+.kg-card-markdown .codehilite .si {
+    color: #CD5555;
+}
+
+.kg-card-markdown .codehilite .sx {
+    color: #cb6c20;
+}
+
+.kg-card-markdown .codehilite .sr {
+    color: #1c7e71;
+}
+
+.kg-card-markdown .codehilite .s1 {
+    color: #CD5555;
+}
+
+.kg-card-markdown .codehilite .ss {
+    color: #CD5555;
+}
+
+.kg-card-markdown .codehilite .bp {
+    color: #658b00;
+}
+
+.kg-card-markdown .codehilite .vc {
+    color: #00688B;
+}
+
+.kg-card-markdown .codehilite .vg {
+    color: #00688B;
+}
+
+.kg-card-markdown .codehilite .vi {
+    color: #00688B;
+}
+
+.kg-card-markdown .codehilite .il {
+    color: #B452CD;
+}
+
+@media (max-width: 480px) {
+    .kg-card-markdown code {
+        padding: 0;
+        margin: 0;
     }
 }
