--- a/default.hbs
+++ b/default.hbs
@@ -62,7 +62,7 @@
         crossorigin="anonymous">
     </script>
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
-
+    <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> 
     {{#if pagination.pages}}
     <script>
         var maxPages = parseInt('{{pagination.pages}}');
